--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-import streamlit as st
-import pandas as pd
-import seaborn as sns
-import matplotlib.pyplot as plt
-import altair as alt
-from sklearn.preprocessing import LabelEncoder
+streamlit==1.27.2
+pandas==2.1.1
+sns== 0.12.2
+matplotlib== 3.7.2
+altair==5.1.2
+sklearn==1.3.0
